# Library-Management

./: .env  .gitignore  IST_Time  IST_Time.py  README.md  app.py  db.py  otp.py  pyproject.toml  requirements.txt  setup.py  tox.ini
Library_Management.egg-info/: PKG-INFO  SOURCES.txt
dev/: github_issue_generator.py  repo_tasks.md
docs/: CNAME  index.html
docs/templates/: details.html  index.html  otp.html
static/css/: details.css  form.css  otp.css
templates/: base.html  details.html  form.html  otp.html
