[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"

authors = [
    {name = "Kartikey", email = "kartikey@example.com"},
    {name = "Hiten Samalia", email = "hiten@example.com"},
    {name = "Uday Palecha", email = "uday@example.com"},
    {name = "Bhavay Luthra", email = "bhavay@example.com"},
    {name = "Andrew Schell", email = "andrewschell3@gmail.com"}
]

description = "My package description"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["library", "books","fyrebase"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version>"3.7"',
]
dynamic = ["version"]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
